# miningpool

./: .gitignore  README.md  config.toml.example  pyproject.toml
pool/: __init__.py  coinbase.py  db.py  jobs.py  main.py  payouts.py  pplns.py  rpc.py  stratum.py  vardiff.py  web.py
pool/static/: style.css
pool/templates/: 404.html  base.html  home.html  worker.html
rxshare/: Makefile  __init__.py  rxshare.c  rxshare.h
scripts/: compare_hash.py  test_pricoin_miner.py
systemd/: pricoinpool.service
tests/: conftest.py  test_coinbase.py  test_payouts.py  test_pplns_split.py  test_rxshare_basic.py  test_stratum_e2e.py  test_vardiff.py  test_web.py
